backup/dap/deploy_yaml/dap-algorithm-handle-platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dap-algorithm-handle-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dap-algorithm-handle-platform
  template:
    metadata:
      labels:
        app: dap-algorithm-handle-platform
    spec:
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "mysql"
        effect: "NoSchedule"
      nodeSelector:
        persistentData: "yes"
      imagePullSecrets:
      - name: docker
      containers:
      - name: dap-algorithm-handle-platform
        imagePullPolicy: Always
        image: docker.cetcxl.local/dap-algorithm-handle-platform:${IMAGE_TAG}
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - mountPath: /home/dap/algorithm
            name: data-handle
          - mountPath: /root/.m2
            name: data-m2
      volumes:
      - name: data-handle
        hostPath:
          path: /K8S_VOL/dap/handle
      - name: data-m2
        hostPath:
          path: /K8S_VOL/dap/.m2
---
apiVersion: v1
kind: Service
metadata:
  name: dap-algorithm-handle-platform
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    #nodePort: 30001
  selector:
    app: dap-algorithm-handle-platform
