backup/dap/deploy_yaml/dap-data-hive-sync-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dap-data-hive-sync-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dap-data-hive-sync-server
  template:
    metadata:
      labels:
        app: dap-data-hive-sync-server
    spec:
      imagePullSecrets:
      - name: docker
      containers:
      - name: dap-data-hive-sync-server
        imagePullPolicy: Always
        image: docker.cetcxl.local/dap-data-hive-sync-server:${IMAGE_TAG}
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dap-data-hive-sync-server
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    #nodePort: 30001
  selector:
    app: dap-data-hive-sync-server
