backup/dap/deploy_yaml/dap-front-data-management-platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dap-front-data-management-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dap-front-data-management-platform
  template:
    metadata:
      labels:
        app: dap-front-data-management-platform
    spec:
      imagePullSecrets:
      - name: docker
      containers:
      - name: dap-front-data-management-platform
        imagePullPolicy: Always
        image: docker.cetcxl.local/dap-front-data-management-platform:${IMAGE_TAG}
---
apiVersion: v1
kind: Service
metadata:
  name: dap-front-data-management-platform
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    #nodePort: 30004
  selector:
    app: dap-front-data-management-platform
