backup/dap/deploy_yaml/dap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dap
spec:
  rules:
  - host: dap.cetcxl.local
    http:
      paths:
      - path: /
        backend:
          serviceName: dap-operate-platform
          servicePort: 8080
